# sql-parser

./: .gitignore  Cargo.toml  README.md
basic-parser/: Cargo.toml  README.md
basic-parser/src/: basic.rs  basic_parser.rs  lib.rs
docs/: 01_overview.md  02_architecture.md  03_roadmap.md  04_tokenizer_spec.md  05_grammar_spec.md  06_api_design.md  07_ui_design.md
explain/: Cargo.toml
explain/src/: analyze.rs  flow.rs  lib.rs
explain/tests/: explain.rs
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.works.jsonc
frontend/scripts/: smoke.ts  stage-deploy.mjs  wasm-smoke.mjs
frontend/src/: App.tsx  index.css
frontend/src/components/: SqlPane.tsx
frontend/src/features/flow/: types.ts
frontend/src/features/flow/components/: FlowArea.tsx  FlowEdge.tsx  GroupBoxNode.tsx  StepBadge.tsx  StepNode.tsx  TableNode.tsx  Timeline.tsx
frontend/src/features/flow/hooks/: useFlowLayout.ts  (+1 more)
frontend/src/hooks/: useExplainedGraph.ts
frontend/src/mock/: flowGraph.ts
frontend/src/types/: flow.ts
frontend/src/wasm/: api.ts
kernel/: README.md
kernel/src/: combinator.rs  lib.rs  parser.rs  satisfy.rs
parser/: Cargo.toml
parser/src/: ast.rs  clause.rs  display.rs  expr.rs  lib.rs  primitive.rs  query.rs  table.rs  token_stream.rs
parser/tests/: parse.rs
shared/src/: lib.rs  parser_type.rs  satisfy.rs
tokenizer/: Cargo.toml  README.md
tokenizer/src/: comment.rs  delimiter.rs  identifier.rs  keyword.rs  lexer.rs  lib.rs  operator.rs  sql_token.rs  tokenize.rs  value.rs
wasm-api/: Cargo.toml
wasm-api/src/: lib.rs
(+3 files in other folders)
