[package]
name = "sql-visualizer"
version = "0.1.0"
edition = "2024"
default-run = "main"

[workspace]
members = ["kernel", "tokenizer", "basic-parser", "parser"]

[workspace.dependencies]
kernel = { path = "./kernel" }
basic-parser = { path = "./basic-parser" }
tokenizer = { path = "./tokenizer" }
parser = { path = "./parser" }

[dependencies]
kernel.workspace = true
tokenizer.workspace = true
basic-parser.workspace = true
parser.workspace = true
